// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Input Form loads rover grid with correct input 1`] = `
<div
  class="App"
>
  <div
    class="cover hidden"
    data-testid="inputCover"
  >
    <h1>
       MARS ROVER 
    </h1>
    <form
      data-testid="inputForm"
    >
      <textarea
        data-testid="commandsInput"
        name="input"
        placeholder="5 5
1 2 N
LMLMLMLMM
3 3 E
MMRMMRMRRM
"
      >
        5 5
1 2 N
LMLMLMLMM
3 3 E
MMRMMRMRRM

      </textarea>
      <br />
      <input
        data-testid="startButton"
        type="button"
        value="Start Rovers"
      />
    </form>
  </div>
  <button
    class="openForm button"
  >
    Edit Commands
  </button>
  <div
    class="grid"
  >
    <div
      class="row"
    >
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="0,5"
        >
          0,5
        </span>
      </div>
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="1,5"
        >
          1,5
        </span>
      </div>
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="2,5"
        >
          2,5
        </span>
      </div>
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="3,5"
        >
          3,5
        </span>
      </div>
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="4,5"
        >
          4,5
        </span>
      </div>
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="5,5"
        >
          5,5
        </span>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="0,4"
        >
          0,4
        </span>
      </div>
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="1,4"
        >
          1,4
        </span>
      </div>
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="2,4"
        >
          2,4
        </span>
      </div>
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="3,4"
        >
          3,4
        </span>
      </div>
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="4,4"
        >
          4,4
        </span>
      </div>
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="5,4"
        >
          5,4
        </span>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="0,3"
        >
          0,3
        </span>
      </div>
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="1,3"
        >
          1,3
        </span>
      </div>
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="2,3"
        >
          2,3
        </span>
      </div>
      <div
        class="column"
      >
        <div
          class="rover east inActive"
          data-testid="rover"
          style="transform: rotate(90deg);"
        />
      </div>
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="4,3"
        >
          4,3
        </span>
      </div>
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="5,3"
        >
          5,3
        </span>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="0,2"
        >
          0,2
        </span>
      </div>
      <div
        class="column"
      >
        <div
          class="rover north inActive"
          data-testid="rover"
          style="transform: rotate(0deg);"
        />
      </div>
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="2,2"
        >
          2,2
        </span>
      </div>
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="3,2"
        >
          3,2
        </span>
      </div>
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="4,2"
        >
          4,2
        </span>
      </div>
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="5,2"
        >
          5,2
        </span>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="0,1"
        >
          0,1
        </span>
      </div>
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="1,1"
        >
          1,1
        </span>
      </div>
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="2,1"
        >
          2,1
        </span>
      </div>
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="3,1"
        >
          3,1
        </span>
      </div>
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="4,1"
        >
          4,1
        </span>
      </div>
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="5,1"
        >
          5,1
        </span>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="0,0"
        >
          0,0
        </span>
      </div>
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="1,0"
        >
          1,0
        </span>
      </div>
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="2,0"
        >
          2,0
        </span>
      </div>
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="3,0"
        >
          3,0
        </span>
      </div>
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="4,0"
        >
          4,0
        </span>
      </div>
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="5,0"
        >
          5,0
        </span>
      </div>
    </div>
  </div>
  <div
    class="messageContainer"
  />
</div>
`;

exports[`App renders according to spec with cover and form visible single payer 1`] = `
<div
  class="App"
>
  <div
    class="cover"
    data-testid="inputCover"
  >
    <h1>
       MARS ROVER 
    </h1>
    <form
      data-testid="inputForm"
    >
      <textarea
        data-testid="commandsInput"
        name="input"
        placeholder="5 5
1 2 N
LMLMLMLMM
3 3 E
MMRMMRMRRM
"
      />
      <br />
      <input
        data-testid="startButton"
        type="button"
        value="Start Rovers"
      />
    </form>
  </div>
  <div
    class="grid hidden"
  >
    <div
      class="row"
    >
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="0,0"
        >
          0,0
        </span>
      </div>
    </div>
  </div>
  <div
    class="messageContainer"
  />
</div>
`;

exports[`App renders according to spec with game mode choices available 1`] = `
<div
  class="App"
>
  <div
    class="cover"
    data-testid="inputCover"
  >
    <h1>
       MARS ROVER 
    </h1>
    <div
      class="gameModeSelection"
    >
      <button
        class="gameMode button"
        data-testid="Multiplayer"
        value="Multiplayer"
      >
        Multiplayer
      </button>
      <br />
      <br />
      <button
        class="gameMode button"
        data-testid="SinglePlayer"
        value="SinglePlayer"
      >
        Single Player
      </button>
    </div>
  </div>
  <div
    class="grid hidden"
  >
    <div
      class="row"
    >
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="0,0"
        >
          0,0
        </span>
      </div>
    </div>
  </div>
  <div
    class="messageContainer"
  />
</div>
`;

exports[`App renders according to spec with waiting for players multiplayer 1`] = `
<div
  class="App"
>
  <div
    class="cover"
    data-testid="inputCover"
  >
    <h1>
       MARS ROVER 
    </h1>
    <h2>
      Waiting for players to connect...
    </h2>
  </div>
  <div
    class="grid hidden"
  >
    <div
      class="row"
    >
      <div
        class="column"
      >
        <span
          class="columnCoordinate"
          title="0,0"
        >
          0,0
        </span>
      </div>
    </div>
  </div>
  <div
    class="messageContainer"
  />
</div>
`;
